refactor: Apply Builder pattern and static factory methods to Todo
- Updated Todo and TodoDto classes to use Builder pattern for object creation
- Refactored factory methods to static methods for improved clarity and usability
- Removed unnecessary annotations to clean up the code
- Modifed controller methods to consistently return ResponseEntity with appropriate status codes