@@ -2,13 +2,13 @@ package com.ssafy.sandbox.todo.service;
 
 import com.ssafy.sandbox.todo.domain.Todo;
 import com.ssafy.sandbox.todo.dto.TodoDto;
+import com.ssafy.sandbox.todo.dto.TodoListResponse;
 import com.ssafy.sandbox.todo.repository.TodoRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -17,18 +17,16 @@ public class TodoService {
 
     private final TodoRepository todoRepository;
 
-    public List<TodoDto> getTodos(){
+    public TodoListResponse getTodos(){
         List<Todo> todos = todoRepository.findAll();
-        return todos.stream()
+        return TodoListResponse.of(
+                todos.stream()
                 .map(TodoDto::from)
-                .collect(Collectors.toList());
+                .toList());
     }
 
     public TodoDto createTodo(TodoDto todoDto){
-        Todo todo = new Todo();
-        todo.setContent(todoDto.getContent());
-//      기본값은 false
-        todo.setCompleted(false);
+        Todo todo = Todo.from(todoDto);
 
         Todo savedTodo = todoRepository.save(todo);
         return TodoDto.from(savedTodo);
@@ -44,9 +42,7 @@ public class TodoService {
         Todo todo = todoRepository.findById(todoId)
                 .orElseThrow(() -> new IllegalArgumentException("Todo for update not found(Illegal or inappropriate parameter)"));
 
-        todo.setCompleted(!todo.isCompleted());
+        todo.toggleTodo();
         todoRepository.save(todo);
     }
-
-
 }
